--- a/data/www/index.html
+++ b/data/www/index.html
@@ -14,6 +14,7 @@
         <button class="nav-btn" data-page="order">注文</button>
         <button class="nav-btn" data-page="kitchen">キッチン</button>
         <button class="nav-btn" data-page="pickup">品出し</button>
+        <button class="nav-btn" data-page="call">呼び出し</button>
         <button class="nav-btn" data-page="settings">設定</button>
         <button class="nav-btn" data-page="export">エクスポート</button>
     </nav>
@@ -27,7 +28,7 @@
     <div id="offline-modal" class="modal hidden">
         <div class="modal-content">
             <h3>⚠️ 接続が切断されました</h3>
-            <p>サーバーとの通信が途切れています。</p>
+            <p>Wi-Fiにつなぎ直してください</p>
             <button id="reconnect-btn" class="btn btn-primary">再接続</button>
         </div>
     </div>
